<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>me.tabinol.secuboid</groupId>
    <artifactId>secuboid</artifactId>
    <version>1.5.0-SNAPSHOT</version>
    <name>Secuboid</name>
    <description>Lands and grief protection plugin for Minecraft (Factoid fork)</description>

    <properties>
        <spigot.version>1.15.2</spigot.version>
        <spigot.suffixversion>-R0.1-SNAPSHOT</spigot.suffixversion>
        <vault.version>1.7.2</vault.version>
        <vaultapi.version>1.7</vaultapi.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <!-- *** Change Language version here here *** -->
        <langVersion>32</langVersion>
        <!-- *** Change land .conf version here here *** -->
        <landVersion>8</landVersion>
        <!-- *** Change players cache .conf version here here *** -->
        <playersCacheVersion>1</playersCacheVersion>
        <!-- *** Change Inventory Storage version here *** -->
        <InventoryStorageVersion>1</InventoryStorageVersion>
        <!-- *** Change MySQL Storage version here *** -->
        <mySqlStorageVersion>1</mySqlStorageVersion>
    </properties>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public</url>
        </repository>

        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.sk89q.com/repo/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Test begin -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.9.11</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>3.1.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.29</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.6</version>
            <scope>test</scope>
        </dependency>
        <!-- Test End -->

        <!-- Spigot API -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>${spigot.version}${spigot.suffixversion}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>net.md-5</groupId>
                    <artifactId>bungeecord-chat</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Bukkit API -->
        <dependency>
            <groupId>org.bukkit</groupId>
            <artifactId>bukkit</artifactId>
            <version>${spigot.version}${spigot.suffixversion}</version>
            <scope>provided</scope>
        </dependency>

        <!-- included in Spigot/Bukkit -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.47</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.fusesource.jansi</groupId>
            <artifactId>jansi</artifactId>
            <version>1.18</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
            <scope>provided</scope>
        </dependency>
        <!-- included in Spigot/Bukkit End -->

        <dependency>
            <groupId>net.milkbowl.vault</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>${vaultapi.version}</version>
            <scope>provided</scope>
            <optional>true</optional>
            <exclusions>
                <exclusion>
                    <groupId>org.bukkit</groupId>
                    <artifactId>bukkit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-core</artifactId>
            <version>7.0.1</version>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-bukkit</artifactId>
            <version>7.0.1</version>
            <scope>provided</scope>
            <optional>true</optional>
            <exclusions>
                <exclusion>
                    <groupId>org.bukkit</groupId>
                    <artifactId>bukkit</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.nijikokun</groupId>
                    <artifactId>iconomy</artifactId>
                </exclusion>

                <exclusion>
                    <groupId>org.khelekore</groupId>
                    <artifactId>prtree</artifactId>
                </exclusion>

                <exclusion>
                    <groupId>net.sf.opencsv</groupId>
                    <artifactId>opencsv</artifactId>
                </exclusion>

                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>

                <exclusion>
                    <groupId>de.schlichtherle</groupId>
                    <artifactId>truezip</artifactId>
                </exclusion>

                <exclusion>
                    <groupId>rhino</groupId>
                    <artifactId>js</artifactId>
                </exclusion>

                <exclusion>
                    <groupId>com.sk89q</groupId>
                    <artifactId>commandbook</artifactId>
                </exclusion>

                <exclusion>
                    <groupId>com.sk89q</groupId>
                    <artifactId>jchronic</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

    </dependencies>

    <build>
        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>${basedir}/src/main/resources/</directory>
                <includes>
                    <include>lang/*.yml</include>
                    <include>*.yml</include>
                    <include>app.properties</include>
                    <include>LICENSE</include>
                </includes>
            </resource>
        </resources>

        <plugins>
            <!-- Required for sonarcloud -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.4</version>
                <configuration>
                    <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
                    <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
                </configuration>
                <executions>
                    <execution>
                        <id>jacoco-initialize</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>jacoco-site</id>
                        <phase>package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ftp</artifactId>
            </extension>
        </extensions>

    </build>

    <distributionManagement>
        <repository>
            <uniqueVersion>true</uniqueVersion>
            <id>tabinol-maven-repo</id>
            <name>tabinol maven repo</name>
            <url>ftps://ftp.tabinol.me/repo</url>
            <layout>default</layout>
        </repository>
    </distributionManagement>
</project>